--- a/.github/workflows/infra.yml
+++ b/.github/workflows/infra.yml
@@ -12,32 +12,81 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # -------------------------
+      # Step 1 — Checkout Repo
+      # -------------------------
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # -------------------------
+      # Step 2 — Setup Terraform
+      # -------------------------
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
+      # -------------------------
+      # Step 3 — Terraform Format Check
+      # -------------------------
+      - name: Terraform Format Check
+        run: terraform fmt -check -recursive
+        working-directory: ./terraform
+
+      # -------------------------
+      # Step 4 — Terraform Validate
+      # -------------------------
+      - name: Terraform Validate
+        run: terraform validate
+        working-directory: ./terraform
+
+      # -------------------------
+      # Step 5 — Terraform Init
+      # -------------------------
       - name: Terraform Init
-        run: terraform init
+        run: terraform init -input=false
         working-directory: ./terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
+      # -------------------------
+      # Step 6 — Terraform Plan With Output
+      # -------------------------
       - name: Terraform Plan
-        run: terraform plan
+        run: terraform plan -input=false -no-color | tee plan_output.txt
         working-directory: ./terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
 
+      # Upload plan as Artifact
+      - name: Upload Terraform Plan Output
+        uses: actions/upload-artifact@v4
+        with:
+          name: terraform-plan
+          path: ./terraform/plan_output.txt
+
+      # -------------------------
+      # Step 7 — Terraform Apply
+      # -------------------------
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -input=false
         working-directory: ./terraform
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
+
+      # -------------------------
+      # Step 8 — Terraform Output
+      # -------------------------
+      - name: Terraform Output
+        run: terraform output -json | tee terraform_outputs.json
+        working-directory: ./terraform
+
+      - name: Upload Terraform Outputs
+        uses: actions/upload-artifact@v4
+        with:
+          name: terraform-outputs
+          path: ./terraform/terraform_outputs.json
